Revert "scrollbar fix - test"
This reverts commit f6ed9c530e82aed83eb744e809b51061ce3786bf.

--- a/css/index.css
+++ b/css/index.css
@@ -46,9 +46,7 @@
     text-transform:uppercase;
     width:100%;
 }*/
-#bCont {
-    overflow: auto;
-}
+
 .btn {
     outline: none !important;
 }
